# lib-ledger-core

./: .gitmodules  CMakeLists.txt  appveyor.yml  binding.gyp  build-jar-linux.sh  build-jar.sh
.circleci/: build_node_module.sh  config.yml  deploy.sh  init_submodules.sh  setup_debian.sh
api/core/java/: ERC20LikeAccount.java  ERC20LikeOperation.java  ERC20LikeTransaction.java  EthereumLikeAccount.java  EthereumLikeAddress.java  EthereumLikeNetworkParameters.java  EthereumLikeTransaction.java  EthereumLikeTransactionBuilder.java
api/core/nodejs/: NJSAccountCpp.cpp  NJSAccountCpp.hpp  NJSAddressCpp.cpp  NJSAddressCpp.hpp  NJSAmountCpp.cpp  NJSAmountCpp.hpp  NJSBitcoinLikeTransactionBuilderCpp.cpp  NJSBitcoinLikeTransactionBuilderCpp.hpp  NJSCurrencyCallback.cpp  NJSCurrencyCallback.hpp  NJSCurrencyListCallback.cpp  NJSCurrencyListCallback.hpp  NJSERC20LikeAccountCpp.cpp  NJSERC20LikeAccountCpp.hpp  NJSERC20LikeOperationCpp.cpp  NJSERC20LikeOperationCpp.hpp  NJSERC20LikeTransactionCpp.cpp  NJSERC20LikeTransactionCpp.hpp  NJSEthereumLikeAccountCpp.cpp  NJSEthereumLikeAccountCpp.hpp  NJSEthereumLikeAddressCpp.cpp  NJSEthereumLikeAddressCpp.hpp  NJSEthereumLikeBlockCpp.cpp  NJSEthereumLikeBlockCpp.hpp  NJSEthereumLikeExtendedPublicKeyCpp.cpp  NJSEthereumLikeExtendedPublicKeyCpp.hpp  NJSEthereumLikeOperationCpp.cpp  NJSEthereumLikeOperationCpp.hpp  NJSEthereumLikeTransactionBuilderCpp.cpp  NJSEthereumLikeTransactionBuilderCpp.hpp  NJSEthereumLikeTransactionCallback.cpp  NJSEthereumLikeTransactionCallback.hpp  NJSEthereumLikeTransactionCpp.cpp  NJSEthereumLikeTransactionCpp.hpp  NJSNetworksCpp.cpp  NJSNetworksCpp.hpp  NJSOperationCpp.cpp  NJSOperationCpp.hpp  NJSSecp256k1Cpp.cpp  NJSSecp256k1Cpp.hpp  (+6 more)
api/core/objc/: LGAccount.h  LGCurrency.h  LGERC20LikeAccount.h  LGERC20LikeOperation.h  LGERC20LikeTransaction.h  LGERC20Token.h  LGEthereumLikeAccount.h  LGEthereumLikeAddress.h  LGEthereumLikeBlock.h  LGEthereumLikeExtendedPublicKey.h  LGEthereumLikeNetworkParameters.h  LGEthereumLikeNetworkParameters.mm  LGEthereumLikeOperation.h  LGEthereumLikeTransaction.h  LGEthereumLikeTransactionBuilder.h  LGEthereumLikeTransactionCallback.h  LGNetworks.h  LGOperation.h  LGSecp256k1.h
api/core/objcpp/: LGERC20LikeAccount+Private.mm  LGERC20LikeOperation+Private.mm  LGERC20LikeTransaction+Private.h  LGERC20LikeTransaction+Private.mm  LGEthereumLikeAccount+Private.mm  LGEthereumLikeAddress+Private.mm  LGEthereumLikeNetworkParameters+Private.mm  LGEthereumLikeTransaction+Private.mm  LGEthereumLikeTransactionBuilder+Private.mm
api/core/scala/: package.scala
core/: CMakeLists.txt
core/lib/: CMakeLists.txt
core/lib/cmake/: IncludeRustProject.cmake
core/lib/crypto/: CMakeLists.txt
core/lib/crypto/wrapper/crypto/: CMakeLists.txt  crypto_rust_test.cpp  crypto_wrapper.cpp  crypto_wrapper.h
core/lib/crypto/wrapper/secp256k1/: CMakeLists.txt  secp256k1_rust_test.cpp  secp256k1_test.h  secp256k1_wrapper.cpp  secp256k1_wrapper.h
core/src/: CMakeLists.txt
core/src/api_impl/: BigIntImpl.hpp  LedgerCoreImpl.cpp  LedgerCoreImpl.hpp
core/src/async/: Deffered.hpp  Future.hpp  LockedResource.hpp
core/src/bitcoin/: BitcoinLikeAddress.hpp  BitcoinLikeExtendedPublicKey.hpp  (+2 more)
core/test/lib/libledger-test/: AsioHttpClient.hpp  CMakeLists.txt  CoutLogPrinter.hpp  FakeWebSocketClient.cpp  FakeWebSocketClient.h  MongooseHttpClient.cpp  MongooseHttpClient.hpp  MongooseSimpleRestServer.hpp  NativePathResolver.hpp  NativeThreadDispatcher.hpp  OpenSSLRandomNumberGenerator.hpp  RustRandomNumberGenerator.cpp  RustRandomNumberGenerator.hpp
core/test/net/: CMakeLists.txt
qt-host/: CMakeLists.txt
qt-host/async/: QtMainExecutionContext.hpp  QtThreadDispatcher.hpp  QtThreadPoolExecutionContext.cpp  QtThreadPoolExecutionContext.hpp
qt-host/net/: QtHttpClient.hpp  QtWebSocketClient.cpp  QtWebSocketClient.h
tools/: generateBindings.sh  generate_interfaces.sh
(+166 files in other folders)
